--- a/ch4-practice/templates/myparactice_ch4/name.html
+++ b/ch4-practice/templates/myparactice_ch4/name.html
@@ -8,7 +8,7 @@
 4. {{ form }} 템플릿 변수
    : 뷰에서 컨텍스트 변수에 포함하여 템플릿 시스템으로 전달
    : 뷰 함수 or 클래스와 그 안의 form 변수가 있어야 함
-5.
+5.table 태그, ul 태그 등등
 -->
 
 <form action="/your-name/" method="post">
