210219 ch5 실습(3) - books 앱 오류 수정 완료

--- a/ch3/templates/base.html
+++ b/ch3/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    {% load static %}
     <link rel="stylesheet" href="{% static 'admin/css/base.css' %}" />
     <title>{% block title %}My Amazing Site{% endblock %}</title>
 </head>
